--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <commons-cli.version>1.5.0</commons-cli.version>
         <webdrivermanager.version>5.3.2</webdrivermanager.version>
         <lombok.version>1.18.30</lombok.version>
+        <skipTests>true</skipTests>
     </properties>
 
     <dependencies>
@@ -162,6 +163,7 @@
                         <include>**/*Test.java</include>
                         <include>**/*TestRunner.java</include>
                     </includes>
+                    <skipTests>${skipTests}</skipTests>
                 </configuration>
             </plugin>
             <plugin>
